--- a/usr/share/openmediavault/locale/cs_CZ/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/cs_CZ/openmediavault-openvpn.po
@@ -3,20 +3,20 @@
 # This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
-# Pavel Borecki <pavel.borecki@gmail.com>, 2015
+# Pavel Borecki <pavel.borecki@gmail.com>, 2015,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-27 09:19-0600\n"
-"PO-Revision-Date: 2017-11-27 15:19+0000\n"
-"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"PO-Revision-Date: 2017-11-28 07:55+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs_CZ\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n <= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;\n"
 
 msgid "Add certificate"
 msgstr "Přidat certifikát"
@@ -30,7 +30,7 @@ msgstr "Umožnit komunikaci mezi klienty"
 msgid ""
 "Authenticate with server using username/password (client certificate and key"
 " are still required)."
-msgstr ""
+msgstr "Ověřovat vůči serveru pomocí uživatelského jména / hesla (pořád je ovšem zapotřebí klientského certifikátu a klíče)."
 
 msgid "Certificates"
 msgstr "Certifikáty"
@@ -72,7 +72,7 @@ msgid "Extra options"
 msgstr "Rozšířené předvolby"
 
 msgid "Gateway interface"
-msgstr ""
+msgstr "Rozhraní brány"
 
 msgid "General"
 msgstr "Obecné"
@@ -85,7 +85,7 @@ msgid ""
 "                             default network gateway through the VPN. If "
 "disabled, a static route to the                             private subnet "
 "is configured on all clients."
-msgstr ""
+msgstr "Pokud je zapnuto, tato direktiva nastaví všechny klienty tak, aby přesměrovali jejich výchozí bránu skrz VPN. Pokud je vypnuto, je na všech klientech nastavena statická trasa do soukromé podsítě."
 
 msgid "Log each packet"
 msgstr "Zaznamenat každý paket"
@@ -106,7 +106,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "PAM authentication"
-msgstr ""
+msgstr "PAM ověřování"
 
 msgid "Port"
 msgstr "Port"
@@ -121,7 +121,7 @@ msgid "Public address"
 msgstr "Veřejná adresa"
 
 msgid "Select a device ..."
-msgstr ""
+msgstr "Vyberte zařízení…"
 
 msgid "Separate multiple entries with commas"
 msgstr "Vícero položek oddělujte čárkou"
