--- a/usr/share/openmediavault/locale/da_DA/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/da_DA/openmediavault-openvpn.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2014
+# Stefan Thrane Overby <stoverby@gmail.com>, 2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-27 09:19-0600\n"
-"PO-Revision-Date: 2017-11-27 15:19+0000\n"
-"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"PO-Revision-Date: 2017-12-02 21:02+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,7 +30,7 @@ msgstr "Tillad klient til klient kommunikation"
 msgid ""
 "Authenticate with server using username/password (client certificate and key"
 " are still required)."
-msgstr ""
+msgstr "Godkend med server ved brug af brugernavn/adgangskode (klient certifikat og nøgle er stadig nødvendig)."
 
 msgid "Certificates"
 msgstr "Certifikater"
@@ -72,7 +72,7 @@ msgid "Extra options"
 msgstr "Ekstra valgmuligheder"
 
 msgid "Gateway interface"
-msgstr ""
+msgstr "Gateway interface"
 
 msgid "General"
 msgstr "Generelt"
@@ -106,7 +106,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "PAM authentication"
-msgstr ""
+msgstr "PAM godkendelse"
 
 msgid "Port"
 msgstr "Port"
@@ -121,7 +121,7 @@ msgid "Public address"
 msgstr "Offentlig adresse"
 
 msgid "Select a device ..."
-msgstr ""
+msgstr "Vælg en enhed ... "
 
 msgid "Separate multiple entries with commas"
 msgstr "Del forskellige indtastninger med komma"
