--- a/usr/share/openmediavault/locale/fr_FR/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/fr_FR/openmediavault-openvpn.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
+# Axel Cantenys <clexanis@gmail.com>, 2017
 # Seboss666 <sebastien_verdet@seboss666.info>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-27 09:19-0600\n"
-"PO-Revision-Date: 2017-11-27 15:19+0000\n"
-"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"PO-Revision-Date: 2017-11-30 13:56+0000\n"
+"Last-Translator: Axel Cantenys <clexanis@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,7 +31,7 @@ msgstr "Autoriser la communication client à client"
 msgid ""
 "Authenticate with server using username/password (client certificate and key"
 " are still required)."
-msgstr ""
+msgstr "Authentifier avec le serveur en utilisant le nom d'utilisateur et le mot de passe (le certificat client et la clé sont toujours requis)."
 
 msgid "Certificates"
 msgstr "Certificats"
@@ -72,7 +73,7 @@ msgid "Extra options"
 msgstr "Options supplémentaires"
 
 msgid "Gateway interface"
-msgstr ""
+msgstr "Interface de passerelle"
 
 msgid "General"
 msgstr "Général"
@@ -85,7 +86,7 @@ msgid ""
 "                             default network gateway through the VPN. If "
 "disabled, a static route to the                             private subnet "
 "is configured on all clients."
-msgstr ""
+msgstr "Si elle est activée, cette directive va configurer tous les clients pour qu'ils redirigent leur passerelle par défaut au travers du VPN. Si désactivée, une route statique vers le sous-réseau privé est configurée sur tous les clients."
 
 msgid "Log each packet"
 msgstr "Journaliser chaque paquet"
@@ -106,7 +107,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "PAM authentication"
-msgstr ""
+msgstr "Authentification PAM"
 
 msgid "Port"
 msgstr "Port"
@@ -121,7 +122,7 @@ msgid "Public address"
 msgstr "Adresse publique"
 
 msgid "Select a device ..."
-msgstr ""
+msgstr "Sélectionnez un appareil ..."
 
 msgid "Separate multiple entries with commas"
 msgstr "Séparer les entrées multiples avec des virgules"
