--- a/usr/share/openmediavault/locale/hu_HU/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/hu_HU/openmediavault-openvpn.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
-# Gyuris Gellért <gellert.gyuris@protonmail.com>, 2017
+# Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017
+# Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-27 09:19-0600\n"
-"PO-Revision-Date: 2017-11-27 15:19+0000\n"
-"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"PO-Revision-Date: 2017-11-27 23:13+0000\n"
+"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,7 +31,7 @@ msgstr "Kliensek közötti kommunikáció engedélyezése"
 msgid ""
 "Authenticate with server using username/password (client certificate and key"
 " are still required)."
-msgstr ""
+msgstr "Felhasználónévvel és jelszóval való azonosítás a kiszolgálón (kliensoldali tanúsítványra és kulcsra továbbra is szükség van)."
 
 msgid "Certificates"
 msgstr "Tanúsítványok"
@@ -72,7 +73,7 @@ msgid "Extra options"
 msgstr "További beállítások"
 
 msgid "Gateway interface"
-msgstr ""
+msgstr "Átjáró felület"
 
 msgid "General"
 msgstr "Általános"
@@ -85,7 +86,7 @@ msgid ""
 "                             default network gateway through the VPN. If "
 "disabled, a static route to the                             private subnet "
 "is configured on all clients."
-msgstr ""
+msgstr "Engedélyezve a direktíva minden klienst úgy állít be, hogy átirányítsák az alapértelmezett átjárójukat a VPN-en keresztül. Letiltva a privát alhálózathoz statikus útvonalat állít be minden kliensen. "
 
 msgid "Log each packet"
 msgstr "Minden csomag naplózása"
@@ -106,7 +107,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "PAM authentication"
-msgstr ""
+msgstr "PAM azonosítás"
 
 msgid "Port"
 msgstr "Kapu"
@@ -121,7 +122,7 @@ msgid "Public address"
 msgstr "Nyilvános cím"
 
 msgid "Select a device ..."
-msgstr ""
+msgstr "Eszköz kijelölése..."
 
 msgid "Separate multiple entries with commas"
 msgstr "Több bejegyzést vesszővel lehet elválasztani"
