--- a/usr/share/openmediavault/locale/zh_TW/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/zh_TW/openmediavault-openvpn.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
-# kochin <kochinc@outlook.com>, 2014
+# kochin <kochinc@outlook.com>, 2014,2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-27 09:19-0600\n"
-"PO-Revision-Date: 2017-11-27 15:19+0000\n"
-"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"PO-Revision-Date: 2018-03-23 14:03+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Add certificate"
-msgstr "新增證書"
+msgstr "新增憑證"
 
 msgid "Address"
 msgstr "地址"
@@ -30,10 +30,10 @@ msgstr "允許客戶端對客戶端的通訊"
 msgid ""
 "Authenticate with server using username/password (client certificate and key"
 " are still required)."
-msgstr ""
+msgstr "以用户名稱/密碼來與何服器做鑑別(但仍然必須有用户端憑證及金鑰)。"
 
 msgid "Certificates"
-msgstr "證書"
+msgstr "憑證"
 
 msgid "Client to client"
 msgstr "客戶端對客戶端"
@@ -72,7 +72,7 @@ msgid "Extra options"
 msgstr "額外選項"
 
 msgid "Gateway interface"
-msgstr ""
+msgstr "閘道介面"
 
 msgid "General"
 msgstr "一般"
@@ -85,7 +85,7 @@ msgid ""
 "                             default network gateway through the VPN. If "
 "disabled, a static route to the                             private subnet "
 "is configured on all clients."
-msgstr ""
+msgstr "若啟用，這項指示將把所有的客戶端設置成經由此 VPN 來重新導向它們的預設網路閘道器。若停用，則會在所有客戶端上設置一個靜態路線到私用子網。"
 
 msgid "Log each packet"
 msgstr "記載每個數據包"
@@ -106,7 +106,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "PAM authentication"
-msgstr ""
+msgstr "PAM 鑑別"
 
 msgid "Port"
 msgstr "通訊埠"
@@ -121,7 +121,7 @@ msgid "Public address"
 msgstr "公開地址"
 
 msgid "Select a device ..."
-msgstr ""
+msgstr "選擇一個裝置 ..."
 
 msgid "Separate multiple entries with commas"
 msgstr "多個項目要以逗號分開"
