--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (4.0.2) stable; urgency=low
+
+  * Fix missing route
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 24 Jan 2019 08:10:02 -0600
+
 openmediavault-openvpn (4.0.1) stable; urgency=low
 
   * Update locales
