--- a/usr/share/openmediavault/locale/fr_FR/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/fr_FR/openmediavault-openvpn.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
-# Axel Cantenys <clexanis@gmail.com>, 2017
+# Axel Cantenys, 2017
 # Seboss666 <sebastien_verdet@seboss666.info>, 2015
 msgid ""
 msgstr ""
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-27 09:19-0600\n"
 "PO-Revision-Date: 2017-11-30 13:56+0000\n"
-"Last-Translator: Axel Cantenys <clexanis@gmail.com>\n"
+"Last-Translator: Axel Cantenys\n"
 "Language-Team: French (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
