--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (4.0.3) stable; urgency=low
+
+  * Create directory recursively
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 29 Jan 2019 07:39:09 -0600
+
 openmediavault-openvpn (4.0.2) stable; urgency=low
 
   * Fix missing route
