--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (4.0.4) stable; urgency=low
+
+  * Fix github issue #24
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 08 Aug 2019 11:01:05 -0500
+
 openmediavault-openvpn (4.0.3) stable; urgency=low
 
   * Create directory recursively
