--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (5.0) stable; urgency=low
+
+  * Update for OMV 5.x
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 24 Nov 2019 09:36:48 -0600
+
 openmediavault-openvpn (4.0.4) stable; urgency=low
 
   * Fix github issue #24
