--- a/usr/share/openmediavault/locale/de_DE/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/de_DE/openmediavault-openvpn.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # David Hönel <davidh1990@gmx.de>, 2015
-# Ettore Atalan <atalanttore@googlemail.com>, 2014
+# Ettore Atalan <atalanttore@googlemail.com>, 2014,2019
 # Raiko, 2015
 # WastlJ, 2015
 msgid ""
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-27 09:19-0600\n"
-"PO-Revision-Date: 2017-11-27 15:19+0000\n"
-"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"PO-Revision-Date: 2019-08-11 12:33+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -109,7 +109,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "PAM authentication"
-msgstr ""
+msgstr "PAM-Authentifizierung"
 
 msgid "Port"
 msgstr "Port"
@@ -124,7 +124,7 @@ msgid "Public address"
 msgstr "Öffentliche Adresse"
 
 msgid "Select a device ..."
-msgstr ""
+msgstr "Wählen Sie ein Gerät aus ..."
 
 msgid "Separate multiple entries with commas"
 msgstr "Trennen Sie mehrere Einträge durch Kommas"
