--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,4 @@
+srv/* srv
 usr/sbin/* usr/sbin
 usr/share/openmediavault/* usr/share/openmediavault
 var/www/openmediavault/* var/www/openmediavault
