--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (5.0.1) stable; urgency=low
+
+  * Fix issues
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 30 Nov 2019 08:37:23 -0600
+
 openmediavault-openvpn (5.0) stable; urgency=low
 
   * Update for OMV 5.x
