--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (5.0.2) stable; urgency=low
+
+  * Bug fixes
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 23 Dec 2019 07:07:31 -0600
+
 openmediavault-openvpn (5.0.1) stable; urgency=low
 
   * Fix issues
