--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (5.1) stable; urgency=low
+
+  * Add device, duplicate CN, and default route settings
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 11 Nov 2020 06:21:22 -0600
+
 openmediavault-openvpn (5.0.2) stable; urgency=low
 
   * Bug fixes
